being able to use a more recent jdk (11)
This was a first try to address the following:
https://github.com/geonetwork/core-geonetwork/issues/4668

Tested so far:

Compilation OK using both jdk 11 & 8 available for debian sid
Tests: failure with jdk11, OK with jdk8

Runtime: Ok with a very basic usage on JRE11. Webapp was able to
bootstrap, loading default schemas + samples MD, browsing the admin UI
interface ...

Skimming the wiki page:
https://github.com/geonetwork/core-geonetwork/wiki/Java-11-Compatibility

it seems that the leg work will be to actually clean up the classloader
from the different dependencies being in several versions in the
classpath, but as a first shot, it sounds mainly OK.